[package]
name = "dimforge-bench-bencher"
version = "0.1.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
simple_logger = "1"
log = "0.4"
mongodb = { version = "1", default_features = false, features = [ "sync" ] }
futures = "0.3"
tokio = "0.2"
serde = { version = "1", features = [ "derive" ] }
bson = "1"
csv = "1"
chrono = "0.4"
rustc_version = "0.2"
dimforge-bench-common = { path = "../common" }
amiquip = "0.3"
serde_json = "1"
clap = "2"
text_io = "0.1"