[package]
name = "dimforge-bench-common"
version = "0.1.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
bson = "1"
serde_json = "1"
