[package]
name = "dimforge-bench-server"
version = "0.1.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1"
log = "0.4"
mongodb = { version = "1", default-features = false, features = [ "sync" ] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = [ "derive" ] }
bson = "1"
hyper = "0.13"
rocket = "0.4"
rocket_cors = "0.5"
serde_json = "1"
chrono = "0.4"
dimforge-bench-common = { path = "../common" }